# src/docs/swagger.yaml
@@ -26,66 +26,6 @@ definitions:
         example: success
         type: string
     type: object
-  example.DuplicateEmail:
-    properties:
-      code:
-        example: 409
-        type: integer
-      message:
-        example: Email already taken
-        type: string
-      status:
-        example: error
-        type: string
-    type: object
-  example.FailedLogin:
-    properties:
-      code:
-        example: 401
-        type: integer
-      message:
-        example: Invalid email or password
-        type: string
-      status:
-        example: error
-        type: string
-    type: object
-  example.FailedResetPassword:
-    properties:
-      code:
-        example: 401
-        type: integer
-      message:
-        example: Password reset failed
-        type: string
-      status:
-        example: error
-        type: string
-    type: object
-  example.FailedVerifyEmail:
-    properties:
-      code:
-        example: 401
-        type: integer
-      message:
-        example: Verify email failed
-        type: string
-      status:
-        example: error
-        type: string
-    type: object
-  example.Forbidden:
-    properties:
-      code:
-        example: 403
-        type: integer
-      message:
-        example: You don't have permission to access this resource
-        type: string
-      status:
-        example: error
-        type: string
-    type: object
   example.ForgotPasswordResponse:
     properties:
       code:
@@ -186,22 +126,6 @@ definitions:
         example: Up
         type: string
     type: object
-  example.HealthCheckError:
-    properties:
-      is_up:
-        example: false
-        type: boolean
-      message:
-        example: 'failed to connect to ''host=localhost user=postgres database=wrongdb'':
-          server error (FATAL: database "wrongdb" does not exist (SQLSTATE 3D000))'
-        type: string
-      name:
-        example: Postgre
-        type: string
-      status:
-        example: Down
-        type: string
-    type: object
   example.HealthCheckResponse:
     properties:
       code:
@@ -219,25 +143,6 @@ definitions:
         type: array
       status:
         example: success
-        type: string
-    type: object
-  example.HealthCheckResponseError:
-    properties:
-      code:
-        example: 500
-        type: integer
-      is_healthy:
-        example: false
-        type: boolean
-      message:
-        example: Health check completed
-        type: string
-      result:
-        items:
-          $ref: '#/definitions/example.HealthCheckError'
-        type: array
-      status:
-        example: error
         type: string
     type: object
   example.LoginResponse:
@@ -266,18 +171,6 @@ definitions:
         type: string
       status:
         example: success
-        type: string
-    type: object
-  example.NotFound:
-    properties:
-      code:
-        example: 404
-        type: integer
-      message:
-        example: Not found
-        type: string
-      status:
-        example: error
         type: string
     type: object
   example.RefreshToken:
@@ -352,18 +245,6 @@ definitions:
         $ref: '#/definitions/example.TokenExpires'
       refresh:
         $ref: '#/definitions/example.TokenExpires'
-    type: object
-  example.Unauthorized:
-    properties:
-      code:
-        example: 401
-        type: integer
-      message:
-        example: Please authenticate
-        type: string
-      status:
-        example: error
-        type: string
     type: object
   example.UpdateUserResponse:
     properties:
@@ -449,11 +330,11 @@ definitions:
   validation.Login:
     properties:
       email:
-        example: fake@example.com
+        example: admin@gmail.com
         maxLength: 50
         type: string
       password:
-        example: password1
+        example: password
         maxLength: 20
         minLength: 8
         type: string
@@ -533,10 +414,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.ForgotPasswordResponse'
-        "404":
-          description: Not found
-          schema:
-            $ref: '#/definitions/example.NotFound'
       summary: Forgot password
       tags:
       - Auth
@@ -570,10 +447,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.LoginResponse'
-        "401":
-          description: Invalid email or password
-          schema:
-            $ref: '#/definitions/example.FailedLogin'
       summary: Login
       tags:
       - Auth
@@ -595,10 +468,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.LogoutResponse'
-        "404":
-          description: Not found
-          schema:
-            $ref: '#/definitions/example.NotFound'
       summary: Logout
       tags:
       - Auth
@@ -620,10 +489,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.RefreshTokenResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/example.Unauthorized'
       summary: Refresh auth tokens
       tags:
       - Auth
@@ -645,10 +510,6 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/example.RegisterResponse'
-        "409":
-          description: Email already taken
-          schema:
-            $ref: '#/definitions/example.DuplicateEmail'
       summary: Register as user
       tags:
       - Auth
@@ -675,10 +536,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.ResetPasswordResponse'
-        "401":
-          description: Password reset failed
-          schema:
-            $ref: '#/definitions/example.FailedResetPassword'
       summary: Reset password
       tags:
       - Auth
@@ -692,10 +549,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.SendVerificationEmailResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/example.Unauthorized'
       security:
       - BearerAuth: []
       summary: Send verification email
@@ -716,10 +569,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.VerifyEmailResponse'
-        "401":
-          description: Verify email failed
-          schema:
-            $ref: '#/definitions/example.FailedVerifyEmail'
       summary: Verify email
       tags:
       - Auth
@@ -735,10 +584,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.HealthCheckResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/example.HealthCheckResponseError'
       summary: Health Check
       tags:
       - Health
@@ -767,14 +612,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.GetAllUserResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/example.Unauthorized'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/example.Forbidden'
       security:
       - BearerAuth: []
       summary: Get all users
@@ -796,18 +633,6 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/example.CreateUserResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/example.Unauthorized'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/example.Forbidden'
-        "409":
-          description: Email already taken
-          schema:
-            $ref: '#/definitions/example.DuplicateEmail'
       security:
       - BearerAuth: []
       summary: Create a user
@@ -830,18 +655,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.DeleteUserResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/example.Unauthorized'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/example.Forbidden'
-        "404":
-          description: Not found
-          schema:
-            $ref: '#/definitions/example.NotFound'
       security:
       - BearerAuth: []
       summary: Delete a user
@@ -863,18 +676,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.GetUserResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/example.Unauthorized'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/example.Forbidden'
-        "404":
-          description: Not found
-          schema:
-            $ref: '#/definitions/example.NotFound'
       security:
       - BearerAuth: []
       summary: Get a user
@@ -902,22 +703,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/example.UpdateUserResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/example.Unauthorized'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/example.Forbidden'
-        "404":
-          description: Not found
-          schema:
-            $ref: '#/definitions/example.NotFound'
-        "409":
-          description: Email already taken
-          schema:
-            $ref: '#/definitions/example.DuplicateEmail'
       security:
       - BearerAuth: []
       summary: Update a user
